fixed alignment issues

--- a/index.css
+++ b/index.css
@@ -154,10 +154,13 @@ article {
 .game {
     padding-left: 3px;
     text-shadow: 2px 2px 2px white;
+    margin-top: 1px;
+    margin-bottom: 1px;
 }
 
 .cal table {
     margin: auto;
+    margin-top: 15px;
     border-collapse: collapse;
     margin-bottom: 15px;
 }
@@ -211,6 +214,7 @@ article {
 
 .depth_charts {
     margin: auto;
+    margin-bottom: 15px;
     width: 90%;
     text-align: center;
 }
@@ -249,6 +253,7 @@ article {
 #news_form {
     text-align: center;
     margin: auto;
+    margin-bottom: 10px;
 }
 
 #foot_blue {
